# MNISTFromScratch

./: .gitignore  CMakeLists.txt  README.md
include/: utils.h
src/: train.cpp  utils.cpp
